Cleaned more code - better readability Also fixed popup laignments and CSS

--- a/popup/examples.css
+++ b/popup/examples.css
@@ -2,19 +2,19 @@
 
 body {
 	background: url(background.png) repeat-x;
-	font: 18px/1.5em "proxima-nova", Helvetica, Arial, sans-serif;
+	/*font: 18px/1.5em "proxima-nova", Helvetica, Arial, sans-serif; */
 }
 
 a {	color: #069; }
 a:hover { color: #28b; }
 
 h2 {
-	margin-top: 15px;
+	margin-top: 5px;
 	font: normal 32px "omnes-pro", Helvetica, Arial, sans-serif;
 }
 
 h3 {
-	margin-left: 30px;
+	margin-left: 5px;
 	font: normal 26px "omnes-pro", Helvetica, Arial, sans-serif;
 	color: #666;
 }
@@ -38,7 +38,7 @@ input[type=checkbox] {
 
 #header {
 	position: relative;
-	width: 900px;
+	width: 450px;
 	margin: auto;
 }
 
@@ -52,14 +52,15 @@ input[type=checkbox] {
 }
 
 #content {
-	width: 880px;
+	width: 500px;
+	height: 290px;
 	margin: 0 auto;
-	padding: 10px;
+	padding: 2px;
 }
 
 #footer {
-	margin-top: 25px;
-	margin-bottom: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	text-align: center;
 	font-size: 12px;
 	color: #999;
@@ -67,10 +68,10 @@ input[type=checkbox] {
 
 .demo-container {
 	box-sizing: border-box;
-	width: 850px;
-	height: 450px;
-	padding: 20px 15px 15px 15px;
-	margin: 15px auto 30px auto;
+	width: 520px;
+	height: 420px;
+	padding: 5px 5px 5px 5px;
+	margin: 5px auto 5px auto;
 	border: 1px solid #ddd;
 	background: #fff;
 	background: linear-gradient(#f6f6f6 0, #fff 50px);
@@ -86,8 +87,10 @@ input[type=checkbox] {
 }
 
 .demo-placeholder {
-	width: 100%;
-	height: 100%;
+	/*width: 100%;
+	height: 100%;	*/
+	width: 500px;
+	height: 400px;
 	font-size: 14px;
 	line-height: 1.2em;
 }
