--- a/popup/template/tabcontent.css
+++ b/popup/template/tabcontent.css
@@ -1,7 +1,7 @@
 ﻿
 ul.tabs
 {
-    padding: 7px 0;
+    padding: 5px 0;
     font-size: 0;
     margin:0;
     list-style-type: none;
@@ -21,7 +21,7 @@ ul.tabs li a
     text-decoration: none;
     position: relative;
     z-index: 1;
-    padding: 7px 16px;
+    padding: 5px 5px;
     border: 1px solid #CCC;
     border-bottom-color:#B7B7B7;
     color: #000;
@@ -61,12 +61,22 @@ ul.tabs li.selected a:hover
         
 div.tabcontent
 {
-    display: block;
+    display: block;	
+	width: 530px;
+	height: 460px;
 }
 
 div.tabcontents
 {
-    border: 1px solid #B7B7B7; padding: 30px;
+    border: 1px solid #B7B7B7; padding: 5px;
     background-color:#FFF;
     border-radius: 0 2px 2px 2px;
 }
+
+div.scroll {
+    width: 530px;
+    height: 440px;
+    overflow: scroll;
+}
+
+
